js, adding transition and autocomplete off for the inputs

--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@
 .container .calculate-age-button {
   margin: 10px 0px;
   padding: 5px 20px;
+  transition: all 0.3s;
 }
 
 .container .calculate-age-button:hover {
