adding a padding on the name input and finishing up with the else if conditional

--- a/style.css
+++ b/style.css
@@ -46,6 +46,11 @@
   width: 50px;
 }
 
+#name-input {
+  padding: 3px;
+  padding-left: 3px;
+}
+
 .container .calculate-age-button {
   margin: 10px 0px;
   padding: 5px 20px;
