adding media query

--- a/style.css
+++ b/style.css
@@ -65,3 +65,13 @@
 .result {
   margin: 5px 0px;
 }
+
+@media screen and (max-width: 400px) {
+  .container h1 {
+    text-align: center;
+  }
+  .result {
+    text-align: center;
+    margin: 0px 30px;
+  }
+}
